--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "@uploadthing/react": "^7.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.1",
     "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.1",
     "recharts": "^2.12.0",
-    "@heroicons/react": "^2.1.1"
+    "uploadthing": "^7.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
